--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>XO Game</title>
-  <link rel="shortcut icon" href="logo.png" type="image/x-icon">
-  <link rel="stylesheet" href="XO.css">
-  <script src="XO.en.js"></script>
+  <link rel="stylesheet" href="xo.css">
+  <script src="en.js"></script>
 </head>
 <body>
-  <a href="XO.ar.html">arabic/العربية</a>
-  <img alt="logo" src="logo.png">
+  <a href="ar.html">arabic/العربية</a>
   <h1><span style="color: red;">X</span>/<span style="color: blue;">O</span> game</h1>
   <p id="who"><span id="in" style="color: red;">X</span> will start</p>
   <div id="blockresolt">
