--- a/ar.html
+++ b/ar.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>لعبة XO</title>
   <link rel="shortcut icon" href="logo.png" type="image/x-icon">
-  <link rel="stylesheet" href="XO.css">
-  <script src="XO.ar.js"></script>
+  <link rel="stylesheet" href="xo.css">
+  <script src="ar.js"></script>
 </head>
 <body>
-  <a href="XO.en.html">english/الإنجليزية</a>
+  <a href="en.html">english/الإنجليزية</a>
   <img alt="logo" src="logo.png">
   <h1><span style="color: red;">X</span>/<span style="color: blue;">O</span> لعبة</h1>
   <p id="who">سوف يبدأ <span id="in" style="color: red;">X</span></p>
