--- a/ar.html
+++ b/ar.html
@@ -9,7 +9,7 @@
   <script src="ar.js"></script>
 </head>
 <body>
-  <a href="en.html">english/الإنجليزية</a>
+  <a href="index.html">english/الإنجليزية</a>
   <img alt="logo" src="logo.png">
   <h1><span style="color: red;">X</span>/<span style="color: blue;">O</span> لعبة</h1>
   <p id="who">سوف يبدأ <span id="in" style="color: red;">X</span></p>
